# solace-agent-mesh-plugins

./: README.md
artifact-host-agent/: README.md  config.yaml  pyproject.toml
artifact-host-agent/src/artifact_host_agent/: __init__.py  lifecycle.py  tools.py  web_server.py
bright-data/: README.md  config.yaml  pyproject.toml
bright-data/guide/: bright-data-plugin-guide.md
bright-data/src/bright_data/: tools.py
cli-entrypoint/: .env.example  .gitignore  README.md  config.yaml  logging.yaml  pyproject.toml
cli-entrypoint/src/cli_entrypoint/: __init__.py  app.py  component.py  logging_utils.py  session_store.py
cli-entrypoint/src/sam_cli_entrypoint_adapter/: __init__.py  app.py  component.py
dataiku-agent/: README.md  config.yaml  pyproject.toml
dataiku-agent/src/dataiku_agent/: __init__.py  lifecycle.py  tools.py
dataiku-agent/src/dataiku_agent/utils/: __init__.py  dataiku_client.py
event-correlator/: .env.example  .gitignore  README.md  config.yaml  logging.yaml  pyproject.toml
event-correlator/src/event_correlator/: __init__.py  app.py  component.py  config_models.py  correlation_engine.py  state_store.py  trigger_rules.py
event-correlator/tests/: conftest.py  e2e_local_test.py  test_correlation_engine.py  test_integration.py  test_state_store.py  test_trigger_rules.py
excel-tools/: README.md  config.yaml  pyproject.toml
excel-tools/examples/: PROMPTS.md  sample_sales_dashboard.xlsx
excel-tools/src/excel_tools/: __init__.py  tools.py
excel-tools/tests/: test_excel_tools.py
filesystem/: README.md  config.yaml  pyproject.toml
filesystem/src/filesystem/: __init__.py
finance/: README.md  config.yaml  pyproject.toml
finance/src/finance/: tools.py
finance/tests/: test_tools.py
find-my-ip/: README.md  config.yaml  pyproject.toml
find-my-ip/src/find_my_ip/: __init__.py  lifecycle.py  services.py  tools.py
find-my-ip/tests/: test_find_my_ip_api.py
imagemagick/: README.md  config.yaml  pyproject.toml
imagemagick/src/imagemagick/: __init__.py  tools.py
local-mlx-vision/: README.md  config.yaml  pyproject.toml
local-mlx-vision/src/local_mlx_vision/: tools.py
local-tts/: README.md  config.yaml  pyproject.toml
local-tts/src/local_tts/: realtime_model_inference_from_file.py  tools.py
object-detection/: README.md  config.yaml  pyproject.toml
object-detection/src/object_detection/: tools.py
sam-graph-agent/: README.md  config.yaml  pyproject.toml
sam-graph-agent/guide/: sam-graph-agent-plugin-guide.md
sam-graph-agent/src/sam_graph_database/: __init__.py  lifecycle.py  tools.py
sam-graph-agent/src/sam_graph_database/services/: database_service.py
sam-graph-agent/tests/: conftest.py  test_database_service.py  test_lifecycle.py  test_placeholder.py  test_tools.py
send-grid/: README.md  config.yaml  pyproject.toml
send-grid/src/send_grid/: tools.py
smtp-gateway/: README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt
smtp-gateway/src/smtp_gateway/: __init__.py  lifecycle.py  services.py  tools.py
smtp-gateway/tests/: test_smtp_gateway.py
tavily/: README.md  config.yaml  pyproject.toml
tavily/guide/: tavily-plugin-guide.md
tavily/src/tavily/: tools.py
video-editor-agent/: README.md  config.yaml  pyproject.toml
video-editor-agent/src/video_editor_agent/: tools.py
web-agent/: README.md  config.yaml  pyproject.toml
web-agent/src/web_agent/: __init__.py  tools.py
