[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.artifact_host_agent.metadata]
type = "agent"

[project]
name = "artifact_host_agent"
version = "0.1.0"
authors = [
  { name="Greg", email="greg.meldrum@solace.com" },
]
description = "Host artifacts on a web server for easy access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",  # Web server framework
]

[tool.hatch.build.targets.wheel]
packages = ["src/artifact_host_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/artifact_host_agent" = "artifact_host_agent/"
"config.yaml" = "artifact_host_agent/config.yaml"
"README.md" = "artifact_host_agent/README.md"
"pyproject.toml" = "artifact_host_agent/pyproject.toml"
