[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.excel_tools.metadata]
type = "agent"

[project]
name = "excel_tools"
version = "0.1.0"
authors = [
  { name="Raphael Caillon" },
]
description = "Excel Tools SAM Plugin — read, write, analyze, and reproduce spreadsheet calculations through natural language. Supports .xlsx and .xls files with full formula evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "formulas>=1.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.hatch.build.targets.wheel]
packages = ["src/excel_tools"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/excel_tools" = "excel_tools/"
"config.yaml" = "excel_tools/config.yaml"
"README.md" = "excel_tools/README.md"
"pyproject.toml" = "excel_tools/pyproject.toml"
