[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.filesystem.metadata]
type = "agent"

[project]
name = "filesystem"
version = "0.1.0"
authors = [
  { name="Leslie Fernando", email="leslie.fernando@solace.com" },
]
description = "Secure file operations with configurable access controls for MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/filesystem"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/filesystem" = "filesystem/"
"config.yaml" = "filesystem/config.yaml"
"README.md" = "filesystem/README.md"
"pyproject.toml" = "filesystem/pyproject.toml"
