[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.finance.metadata]
type = "agent"

[project]
name = "finance"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Stock price and fundamentals data plugin using yfinance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finance"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/finance" = "finance/"
"config.yaml" = "finance/config.yaml"
"README.md" = "finance/README.md"
"pyproject.toml" = "finance/pyproject.toml"
