[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.local_tts.metadata]
type = "agent"

[project]
name = "local_tts"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A SAM plugin: local tts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers==4.51.3",
    "ffmpeg-python",
    "vibevoice @ git+https://github.com/microsoft/VibeVoice.git",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_tts"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "local_tts/config.yaml"
"README.md" = "local_tts/README.md"
"pyproject.toml" = "local_tts/pyproject.toml"
