[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.send_grid.metadata]
type = "agent"

[project]
name = "send_grid"
version = "0.1.0"
authors = [
  { name="Cyrus Mobini", email="cyrus.mobini@solace.com" },
]
description = "SendGrid Agent for sending emails."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sendgrid==6.12.5"
]

[tool.hatch.build.targets.wheel]
packages = ["src/send_grid"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/send_grid" = "send_grid/"
"config.yaml" = "send_grid/config.yaml"
"README.md" = "send_grid/README.md"
"pyproject.toml" = "send_grid/pyproject.toml"
