[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.tavily.metadata]
type = "agent"

[project]
name = "tavily"
version = "0.1.0"
authors = [
  { name="Jamieson Walker", email="jamieson.walker@solace.com" },
]
description = "An agent for searching the web with tavily ai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/tavily"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/tavily" = "tavily/"
"config.yaml" = "tavily/config.yaml"
"README.md" = "tavily/README.md"
"pyproject.toml" = "tavily/pyproject.toml"
