[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.video_editor_agent.metadata]
type = "agent"

[project]
name = "video_editor_agent"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A SAM plugin: video editor agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python",
]

[tool.hatch.build.targets.wheel]
packages = ["src/video_editor_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "video_editor_agent/config.yaml"
"README.md" = "video_editor_agent/README.md"
"pyproject.toml" = "video_editor_agent/pyproject.toml"
