[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.web_agent.metadata]
type = "agent"

[project]
name = "web_agent"
version = "0.1.0"
authors = [
  { name="Greg", email="greg.meldrum@solace.com" },
]
description = "Web agent with request and search capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=1.0.0",  # DuckDuckGo search (renamed from duckduckgo-search)
]

[tool.hatch.build.targets.wheel]
packages = ["src/web_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/web_agent" = "web_agent/"
"config.yaml" = "web_agent/config.yaml"
"README.md" = "web_agent/README.md"
"pyproject.toml" = "web_agent/pyproject.toml"
